force-app/main/default/objects/ItemPropostaSiggo__c/ItemPropostaSiggo__c.object-meta.xml
<CustomObject>
    <description>Estrutura que descreve os itens de uma proposta</description>
    <label>Veículo</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Veículo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Veículos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>