force-app/main/default/objects/ItemPropostaSiggo__c/fields/AnalPrel_CodigoRetorno__c.field-meta.xml
<CustomField>
    <fullName>AnalPrel_CodigoRetorno__c</fullName>
    <description>Recebe o código da cotação de seguro.</description>
    <inlineHelpText>Campo somente leitura - conterá o retorno da cotação de seguro.</inlineHelpText>
    <label>Código de retorno</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>