force-app/main/default/objects/ItemPropostaSiggo__c/fields/AnalPrel_Contrato__c.field-meta.xml
<CustomField>
    <fullName>AnalPrel_Contrato__c</fullName>
    <label>Contrato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>