force-app/main/default/objects/ItemPropostaSiggo__c/fields/AnalPrel_MensagemRetorno__c.field-meta.xml
<CustomField>
    <fullName>AnalPrel_MensagemRetorno__c</fullName>
    <description>Recebe a mensagem de retorno da cotação de seguro.</description>
    <inlineHelpText>Campo somente leitura - conterá o retorno da cotação de seguro.</inlineHelpText>
    <label>Mensagem de retorno</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>