force-app/main/default/objects/ItemPropostaSiggo__c/fields/AnalPrel_NumeroOrcamento__c.field-meta.xml
<CustomField>
    <fullName>AnalPrel_NumeroOrcamento__c</fullName>
    <description>Recebe o orçamento da cotação de seguro.</description>
    <inlineHelpText>Campo somente leitura - conterá o retorno da cotação de seguro.</inlineHelpText>
    <label>Orçamento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>