force-app/main/default/objects/ItemPropostaSiggo__c/fields/AnalPrel_ValorPremio__c.field-meta.xml
<CustomField>
    <fullName>AnalPrel_ValorPremio__c</fullName>
    <description>Recebe o retorno do prêmio da cotação de seguro.</description>
    <inlineHelpText>Campo somente leitura - conterá o retorno da cotação de seguro.</inlineHelpText>
    <label>Prêmio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>