force-app/main/default/objects/ItemPropostaSiggo__c/fields/AutoUtilizacao__c.field-meta.xml
<CustomField>
    <fullName>AutoUtilizacao__c</fullName>
    <label>Auto-Utilização</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-Particular</fullName>
            </value>
            <value>
                <fullName>2-Comercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>