force-app/main/default/objects/ItemPropostaSiggo__c/fields/FinalidadeUsoVeiculo__c.field-meta.xml
<CustomField>
    <fullName>FinalidadeUsoVeiculo__c</fullName>
    <label>Finalidade de Uso do Veiculo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>UtilizacaoVeiculo__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1-Taxi</fullName>
            </value>
            <value>
                <fullName>2-Funerário</fullName>
            </value>
            <value>
                <fullName>3-Ambulância</fullName>
            </value>
            <value>
                <fullName>4-Policiamento ou Escolta</fullName>
            </value>
            <value>
                <fullName>5-Auto Escola</fullName>
            </value>
            <value>
                <fullName>6-Locação</fullName>
            </value>
            <value>
                <fullName>7-Guincho</fullName>
            </value>
            <value>
                <fullName>8-Escolar</fullName>
            </value>
            <value>
                <fullName>9-Bombeiro</fullName>
            </value>
            <value>
                <fullName>10-Lotação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>