force-app/main/default/objects/ItemPropostaSiggo__c/fields/Id_modelo__c.field-meta.xml
<CustomField>
    <fullName>Id_modelo__c</fullName>
    <formula>TEXT(Modelo_do_Veiculo__r.ID_do_modelo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id modelo</label>
    <type>Text</type>
</CustomField>