force-app/main/default/objects/ItemPropostaSiggo__c/fields/Instalar_bloqueador__c.field-meta.xml
<CustomField>
    <fullName>Instalar_bloqueador__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SIGGO - Campo que indica o pedido de bloqueador para o produto contratado. Só pode ser selecionado para produtos que aceitem bloqueador - verif. regra de validação.</description>
    <inlineHelpText>Selecione caso o cliente queira a instalação de bloqueador.</inlineHelpText>
    <label>Instalar bloqueador?</label>
    <type>Checkbox</type>
</CustomField>