force-app/main/default/objects/ItemPropostaSiggo__c/fields/Marca_Veiculo__c.field-meta.xml
<CustomField>
    <fullName>Marca_Veiculo__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Marca do veículo na Intranet/FIPE</description>
    <inlineHelpText>Marca do veículo na Intranet/FIPE</inlineHelpText>
    <label>Marca do Veículo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Marca_Veiculo__c.Ativo__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Marca_Veiculo__c</referenceTo>
    <relationshipLabel>Veículos</relationshipLabel>
    <relationshipName>Itens_da_Proposta_Siggo</relationshipName>
    <type>Lookup</type>
</CustomField>