force-app/main/default/objects/ItemPropostaSiggo__c/fields/Modelo_do_Veiculo__c.field-meta.xml
<CustomField>
    <fullName>Modelo_do_Veiculo__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Modelo do veículo na Intranet/FIPE</description>
    <inlineHelpText>Modelo do veículo na Intranet/FIPE</inlineHelpText>
    <label>Modelo do Veículo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Modelo_do_Veiculo__c.Marca_Veiculo__c</field>
            <operation>equals</operation>
            <valueField>$Source.Marca_Veiculo__c</valueField>
        </filterItems>
        <filterItems>
            <field>Modelo_do_Veiculo__c.Ativo__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Exibe apenas os Modelos desta Marca</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Modelo_do_Veiculo__c</referenceTo>
    <relationshipLabel>Veículos</relationshipLabel>
    <relationshipName>Itens_da_Proposta_Siggo</relationshipName>
    <type>Lookup</type>
</CustomField>