force-app/main/default/objects/ItemPropostaSiggo__c/fields/N_mero_contrato__c.field-meta.xml
<CustomField>
    <fullName>N_mero_contrato__c</fullName>
    <formula>Value(NumeroContrato__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número contrato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>