force-app/main/default/objects/ItemPropostaSiggo__c/fields/NumeroContrato__c.field-meta.xml
<CustomField>
    <fullName>NumeroContrato__c</fullName>
    <description>Recebe o número do contrato após geração de termo.</description>
    <inlineHelpText>Campo somente leitura - conterá o retorno do contrato.</inlineHelpText>
    <label>Número do Contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>