force-app/main/default/objects/ItemPropostaSiggo__c/fields/Observacoes__c.field-meta.xml
<CustomField>
    <fullName>Observacoes__c</fullName>
    <description>Campo utilizado para registrar informações referente a produtos e acessórios.</description>
    <inlineHelpText>Informe aqui Produtos e Acessórios instalados neste veículo.</inlineHelpText>
    <label>Observações</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>