force-app/main/default/objects/ItemPropostaSiggo__c/fields/Ordenador__c.field-meta.xml
<CustomField>
    <fullName>Ordenador__c</fullName>
    <description>Campo utilizado para ordernar os itens da proposta porque o serviço da intranet não permite identificar cada um dos itens.</description>
    <label>Ordenador</label>
    <type>AutoNumber</type>
</CustomField>