force-app/main/default/objects/ItemPropostaSiggo__c/fields/StatusContrato__c.field-meta.xml
<CustomField>
    <fullName>StatusContrato__c</fullName>
    <description>Recebe o status do contrato após geração de termo.</description>
    <inlineHelpText>Campo somente leitura - conterá o retorno do contrato.</inlineHelpText>
    <label>Status do Contrato</label>
    <length>50</length>
    <type>Text</type>
</CustomField>