force-app/main/default/objects/ItemPropostaSiggo__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAMINHÃO</fullName>
            </value>
            <value>
                <fullName>CAMINHÃO ARTICULADO</fullName>
            </value>
            <value>
                <fullName>CAMINHÃO FORA DE ESTRADA</fullName>
            </value>
            <value>
                <fullName>CAMINHONETE</fullName>
            </value>
            <value>
                <fullName>CARREGADEIRA</fullName>
            </value>
            <value>
                <fullName>EMPILHADEIRA A COMBUSTÃO</fullName>
            </value>
            <value>
                <fullName>EMPILHADEIRA ELETRICA</fullName>
            </value>
            <value>
                <fullName>EMPTY HANDLER</fullName>
            </value>
            <value>
                <fullName>ESCAVADEIRA</fullName>
            </value>
            <value>
                <fullName>GRUAS</fullName>
            </value>
            <value>
                <fullName>GUINDASTE</fullName>
            </value>
            <value>
                <fullName>MINICARREGADEIRA</fullName>
            </value>
            <value>
                <fullName>MOTONIVELADORA</fullName>
            </value>
            <value>
                <fullName>MOTORSCRAPERS</fullName>
            </value>
            <value>
                <fullName>ÔNIBUS</fullName>
            </value>
            <value>
                <fullName>REACH STACKER</fullName>
            </value>
            <value>
                <fullName>RETROESCAVADEIRA</fullName>
            </value>
            <value>
                <fullName>ROLO COMPACTADOR</fullName>
            </value>
            <value>
                <fullName>TRATOR</fullName>
            </value>
            <value>
                <fullName>TRANSPALETEIRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>