force-app/main/default/objects/ItemPropostaSiggo__c/fields/TipoSegurado__c.field-meta.xml
<CustomField>
    <fullName>TipoSegurado__c</fullName>
    <label>Tipo de segurado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-Segurado não é proprietário</fullName>
            </value>
            <value>
                <fullName>1-Segurado é proprietário</fullName>
                <default>true</default>
                <label>1-Segurado é proprietário</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>