force-app/main/default/objects/ItemPropostaSiggo__c/fields/UtilizacaoVeiculo__c.field-meta.xml
<CustomField>
    <fullName>UtilizacaoVeiculo__c</fullName>
    <label>Utilização do Veículo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-Lazer</fullName>
            </value>
            <value>
                <fullName>2-Locomoção diária</fullName>
            </value>
            <value>
                <fullName>3-Exercício do trabalho</fullName>
            </value>
            <value>
                <fullName>9-Uso profissional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>