force-app/main/default/objects/ItemPropostaSiggo__c/fields/Valor_da_demonstracao__c.field-meta.xml
<CustomField>
    <fullName>Valor_da_demonstracao__c</fullName>
    <label>Valor da demonstração</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>