force-app/main/default/objects/ItemPropostaSiggo__c/fields/ValorMonitoramento__c.field-meta.xml
<CustomField>
    <fullName>ValorMonitoramento__c</fullName>
    <label>Valor do Monitoramento</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>