force-app/main/default/objects/ItemPropostaSiggo__c/fields/ValorParcelaLocacao__c.field-meta.xml
<CustomField>
    <fullName>ValorParcelaLocacao__c</fullName>
    <label>Valor da Parcela de Locação</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>