force-app/main/default/objects/ItemPropostaSiggo__c/fields/Veiculo_AnoModelo__c.field-meta.xml
<CustomField>
    <fullName>Veiculo_AnoModelo__c</fullName>
    <label>Ano do Modelo</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>