force-app/main/default/objects/ItemPropostaSiggo__c/fields/Veiculo_Chassi__c.field-meta.xml
<CustomField>
    <fullName>Veiculo_Chassi__c</fullName>
    <label>Chassi</label>
    <length>17</length>
    <type>Text</type>
</CustomField>