force-app/main/default/objects/ItemPropostaSiggo__c/fields/Veiculo_ClienteEhProprietario__c.field-meta.xml
<CustomField>
    <fullName>Veiculo_ClienteEhProprietario__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Cliente é o proprietario</label>
    <type>Checkbox</type>
</CustomField>