force-app/main/default/objects/ItemPropostaSiggo__c/fields/Veiculo_CodigoFipe__c.field-meta.xml
<CustomField>
    <fullName>Veiculo_CodigoFipe__c</fullName>
    <formula>Modelo_do_Veiculo__r.Codigo_FIPE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código FIPE</label>
    <type>Text</type>
</CustomField>