force-app/main/default/objects/ItemPropostaSiggo__c/fields/Veiculo_CodigoMarca__c.field-meta.xml
<CustomField>
    <fullName>Veiculo_CodigoMarca__c</fullName>
    <formula>Marca_Veiculo__r.ID_da_marca__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código do Veículo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>