force-app/main/default/objects/ItemPropostaSiggo__c/fields/Veiculo_CodigoModelo__c.field-meta.xml
<CustomField>
    <fullName>Veiculo_CodigoModelo__c</fullName>
    <formula>Modelo_do_Veiculo__r.ID_do_modelo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código do Modelo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>