force-app/main/default/objects/ItemPropostaSiggo__c/fields/Veiculo_Combustivel__c.field-meta.xml
<CustomField>
    <fullName>Veiculo_Combustivel__c</fullName>
    <label>Combustivel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-Gasolina</fullName>
            </value>
            <value>
                <fullName>2-Alcool</fullName>
            </value>
            <value>
                <fullName>3-Diesel</fullName>
            </value>
            <value>
                <fullName>4-Bicombustivel</fullName>
            </value>
            <value>
                <fullName>5-Gas</fullName>
            </value>
            <value>
                <fullName>6-Tricombustivel</fullName>
            </value>
            <value>
                <fullName>7-Tetrafuel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>