force-app/main/default/objects/ItemPropostaSiggo__c/fields/Veiculo_Cor__c.field-meta.xml
<CustomField>
    <fullName>Veiculo_Cor__c</fullName>
    <label>Cor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>