force-app/main/default/objects/ItemPropostaSiggo__c/fields/Veiculo_Eh0KM__c.field-meta.xml
<CustomField>
    <fullName>Veiculo_Eh0KM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carro 0KM</label>
    <type>Checkbox</type>
</CustomField>