force-app/main/default/objects/ItemPropostaSiggo__c/fields/Veiculo_Placa__c.field-meta.xml
<CustomField>
    <fullName>Veiculo_Placa__c</fullName>
    <label>Placa</label>
    <length>7</length>
    <type>Text</type>
</CustomField>