force-app/main/default/objects/ItemPropostaSiggo__c/fields/Veiculo_Proprietario_CNPJCPF__c.field-meta.xml
<CustomField>
    <fullName>Veiculo_Proprietario_CNPJCPF__c</fullName>
    <label>CNPJ/CPF</label>
    <length>18</length>
    <type>Text</type>
</CustomField>