force-app/main/default/objects/ItemPropostaSiggo__c/fields/Veiculo_Proprietario_DataNascimento__c.field-meta.xml
<CustomField>
    <fullName>Veiculo_Proprietario_DataNascimento__c</fullName>
    <label>Data de Nascimento</label>
    <type>Date</type>
</CustomField>