force-app/main/default/objects/ItemPropostaSiggo__c/fields/Veiculo_Proprietario_EMail__c.field-meta.xml
<CustomField>
    <fullName>Veiculo_Proprietario_EMail__c</fullName>
    <label>E-mail</label>
    <type>Email</type>
</CustomField>