force-app/main/default/objects/ItemPropostaSiggo__c/fields/Veiculo_Proprietario_Endereco_CEP__c.field-meta.xml
<CustomField>
    <fullName>Veiculo_Proprietario_Endereco_CEP__c</fullName>
    <label>CEP</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>