force-app/main/default/objects/ItemPropostaSiggo__c/fields/Veiculo_Proprietario_Endereco_Logradouro__c.field-meta.xml
<CustomField>
    <fullName>Veiculo_Proprietario_Endereco_Logradouro__c</fullName>
    <label>Logradouro</label>
    <length>50</length>
    <type>Text</type>
</CustomField>