force-app/main/default/objects/ItemPropostaSiggo__c/fields/Veiculo_Proprietario_Endereco_Numero__c.field-meta.xml
<CustomField>
    <fullName>Veiculo_Proprietario_Endereco_Numero__c</fullName>
    <label>Número</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>