force-app/main/default/objects/ItemPropostaSiggo__c/fields/Veiculo_Proprietario_Endereco_Pais__c.field-meta.xml
<CustomField>
    <fullName>Veiculo_Proprietario_Endereco_Pais__c</fullName>
    <defaultValue>&#39;BR&#39;</defaultValue>
    <label>País</label>
    <length>2</length>
    <type>Text</type>
</CustomField>