force-app/main/default/objects/ItemPropostaSiggo__c/fields/Veiculo_Proprietario_EstadoCivil__c.field-meta.xml
<CustomField>
    <fullName>Veiculo_Proprietario_EstadoCivil__c</fullName>
    <label>Estado Civil</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C-Casado</fullName>
            </value>
            <value>
                <fullName>S-Solteiro</fullName>
            </value>
            <value>
                <fullName>V-Viúvo</fullName>
            </value>
            <value>
                <fullName>D-Divorciado</fullName>
            </value>
            <value>
                <fullName>A-Amasiado</fullName>
            </value>
            <value>
                <fullName>O-Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>