force-app/main/default/objects/ItemPropostaSiggo__c/fields/Veiculo_Proprietario_Nome__c.field-meta.xml
<CustomField>
    <fullName>Veiculo_Proprietario_Nome__c</fullName>
    <label>Nome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>