force-app/main/default/objects/ItemPropostaSiggo__c/fields/Veiculo_Proprietario_RG__c.field-meta.xml
<CustomField>
    <fullName>Veiculo_Proprietario_RG__c</fullName>
    <label>RG</label>
    <length>9</length>
    <type>Text</type>
</CustomField>