force-app/main/default/objects/ItemPropostaSiggo__c/fields/Veiculo_Proprietario_Sexo__c.field-meta.xml
<CustomField>
    <fullName>Veiculo_Proprietario_Sexo__c</fullName>
    <label>Sexo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M-Masculino</fullName>
            </value>
            <value>
                <fullName>F-Feminino</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>