force-app/main/default/objects/ItemPropostaSiggo__c/fields/Veiculo_Proprietario_TipoPessoa__c.field-meta.xml
<CustomField>
    <fullName>Veiculo_Proprietario_TipoPessoa__c</fullName>
    <label>Tipo de pessoa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F-Física</fullName>
            </value>
            <value>
                <fullName>J-Jurídica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>