force-app/main/default/objects/ItemPropostaSiggo__c/fields/Veiculo_Renavam__c.field-meta.xml
<CustomField>
    <fullName>Veiculo_Renavam__c</fullName>
    <defaultValue>&quot;1234567&quot;</defaultValue>
    <label>Renavam</label>
    <length>11</length>
    <type>Text</type>
</CustomField>