force-app/main/default/objects/ItemPropostaSiggo__c/validationRules/CodigoFipe.validationRule-meta.xml
<ValidationRule>
    <fullName>CodigoFipe</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Veiculo_CodigoFipe__c  )</errorConditionFormula>
    <errorMessage>Escolha um modelo com código FIPE atribuído</errorMessage>
</ValidationRule>