force-app/main/default/objects/ItemPropostaSiggo__c/validationRules/Valor20mil.validationRule-meta.xml
<ValidationRule>
    <fullName>Valor20mil</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Oportunidade__r.Tem_seguro__c = true,
  Oportunidade__r.Valor_FIPE__c = 20000.00, 
AND(
OR(
 Valor_FIPE__c &gt; 20000.00,
 Valor_FIPE__c &lt; 0.00
)))</errorConditionFormula>
    <errorMessage>Produto selecionado tem valor menor ou maior que o valor do modelo selecionado, favor corrigir o produto.</errorMessage>
</ValidationRule>