force-app/main/default/objects/ItemPropostaSiggo__c/validationRules/Valor60mil.validationRule-meta.xml
<ValidationRule>
    <fullName>Valor60mil</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Oportunidade__r.Tem_seguro__c = true,
  Oportunidade__r.Valor_FIPE__c = 60000.00,
AND(
OR(
   Valor_FIPE__c &gt; 60000.00,
   Valor_FIPE__c &lt; 50000.01
)))</errorConditionFormula>
    <errorMessage>Produto selecionado tem valor menor ou maior que o valor do modelo selecionado, favor corrigir o produto.</errorMessage>
</ValidationRule>